2005-04-22  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Clean up and modernise autoconf usage. Remove
	  maintainer mode. Increment version in interface numbers ready
	  for 0.6.3 release.

	* varconf.spec.in: Remove requirements for sigc++ packages, as the
	  package names vary and break the requirements in a really annoying
	  way.

2005-01-10  Simon Goodall  <simon@simongoodall.co.uk>

	* varconf/config.cpp, varconf/Config.h: Make findItem, findSection and 
	  find const.

2004-12-31  Al Riddoch  <alriddoch@zepler.org>

	* varconf.spec.in: Update spec with License URL Package Vendor
	  and Distribution tags.

2004-11-13  Al Riddoch  <alriddoch@zepler.org>

	* tests/conftest.cpp: Fix a couple of places to work with sigc++2.
	  Cleanup namespace use generally.

2004-11-11  Ron Steinke <rsteinke@w-link.net>

	* varconf/config.cpp: Initialize Config::m_instance to 0, instead
	  of leaving it uninitialized.

2004-10-06  Al Riddoch  <alriddoch@zepler.org>

	* Release 0.6.2. Interface version 2.0.0, or 3.0.0 with sigc++ 2.0.

2004-10-05  Al Riddoch  <alriddoch@zepler.org>

	* varconf/variable.h: Add an accessor function explicitly making
	  a variable available as string, to get round nasty impicit
	  conversion rules in modern C++ compilers.

2004-10-03  Al Riddoch  <alriddoch@zepler.org>

	* Reverse the order of configure checks, so sigc++ 2.0 is detected
	  first. Better in the long run.

	* varconf/Config.h, varconf/config.cpp, varconf/dynbase.cpp,
	  varconf/dynbase.h, varconf/dyncmp.cpp, varconf/dyncmp.h,
	  varconf/dyntypes.cpp, varconf/dyntypes.h, varconf/parse_error.cpp,
	  varconf/parse_error.h, varconf/variable.cpp, varconf/variable.h:
	  Clean up the code moving virtual function definitions out of
	  the headers, making the style more consistent.

2004-10-02  Al Riddoch  <alriddoch@zepler.org>

	* Add configure check for sigc++ 2.0, make the pkgconfig file
	  conflict with packages which require the other version of