@@ -1,3 +1,10 @@
+2005-04-23  Al Riddoch  <alriddoch@zepler.org>
+
+	* configure.ac, varconf-1.0.pc.in, varconf.spec.in: Remove
+	  VARCONF_PACKAGE and VARCONF_VERSION and use the standard
+	  PACAKGE and VERSION variables. Switch to bz2 compression for
+	  the rpm source package.
+
 2005-04-22  Al Riddoch  <alriddoch@zepler.org>
 
 	* configure.ac: Clean up and modernise autoconf usage. Remove
